--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ VerifierPath.py
 
 #xml files in results
 results/*.xml
+
+#log files
+LogFile.txt
+CPU-LogFile.txt
+
+
+#Temp model
+UppaalModels/tempModel1.xml
